--- a/views/listeduser.ejs
+++ b/views/listeduser.ejs
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h2><%= user.title %></h2>
+    <p><%= user.price%></p>
+  </body>
 </html>
