--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>OUR Listings</h1>
+    <form action="/listing/new" method="get">
+    <button type="button">create a post</button>
+        </form>
     <div>
       <% for (var i = 0; i < allListing.length; i++) { %>
        <h2>
