making more dynamic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,10 @@
   </head>
   <body>
     <h1>OUR Listings</h1>
-    <form action="/listing/new" method="get">
-    <button type="button">create a post</button>
-        </form>
+    <form action="/newPost" method="get">
+  <button type="submit">Create a Post</button>
+</form>
+
     <div>
       <% for (var i = 0; i < allListing.length; i++) { %>
        <h2>
