--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>OUR Listings</h1>
-    <form action="/newPost" method="get">
+    <form action="listing/newPost" method="get">
   <button type="submit">Create a Post</button>
 </form>
 
