--- a/views/listeduser.ejs
+++ b/views/listeduser.ejs
@@ -8,5 +8,6 @@
   <body>
     <h2><%= user.title %></h2>
     <p><%= user.price%></p>
+    <a href="/listing/<%=listing._id%>/edit">EDIT</a>
   </body>
 </html>
