--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Post</title>
+    <title>EDIT</title>
   </head>
   <body>
     <h3>Create a new listing</h3>
