--- a/views/listeduser.ejs
+++ b/views/listeduser.ejs
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h2><%= user.title %></h2>
+    <h2><%= user.description %></h2>
     <p><%= user.price%></p>
-    <a href="/listing/<%=listing._id%>/edit">EDIT</a>
+    <a href="/listing/<%=user._id%>/edit">EDIT</a>
+    <br />
+    <br />
+    <a href="/listing/<%=user._id%>/delete">Delete this</a>
   </body>
 </html>
