--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -1,47 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Post</title>
-  </head>
-  <body>
-    <h3>Create a new listing</h3>
-    <form action="/listing" method="post">
-      <input
-        type="text"
-        name="listing[title]"
-        id=""
-        placeholder="enter title"
-      />
-      <br />
-      <br />
-      <textarea
-        placeholder="enter description"
-        id=""
-        name="listing[description]"
-      ></textarea>
-      <br />
-      <br />
-      <input
-        type="text"
-        placeholder="enter image URl/link"
-        name="listing[Image]"
-      />
-      <br />
-      <br />
-      <input type="number" placeholder="enter price" name="listing[price]" />
-      <br />
-      <br />
-      <input type="text" placeholder="enter country" name="listing[country]" />
-      <br />
-      <br />
-      <input
-        type="text"
-        placeholder="enter location"
-        name="listing[location]"
-      />
-      <button type="submit">ADD</button>
-    </form>
-  </body>
-</html>
+<% layout('/layouts/boilerplates') %>
+<body>
+  <h3>Create a new listing</h3>
+  <form action="/listing" method="post">
+    <input type="text" name="listing[title]" id="" placeholder="enter title" />
+    <br />
+    <br />
+    <textarea
+      placeholder="enter description"
+      id=""
+      name="listing[description]"
+    ></textarea>
+    <br />
+    <br />
+    <input
+      type="text"
+      placeholder="enter image URl/link"
+      name="listing[Image]"
+    />
+    <br />
+    <br />
+    <input type="number" placeholder="enter price" name="listing[price]" />
+    <br />
+    <br />
+    <input type="text" placeholder="enter country" name="listing[country]" />
+    <br />
+    <br />
+    <input type="text" placeholder="enter location" name="listing[location]" />
+    <button type="submit">ADD</button>
+  </form>
+</body>
