--- a/views/layouts/boilerplates.ejs
+++ b/views/layouts/boilerplates.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WonderLust</title>
+    <link rel="stylesheet" href="/css/style.CSS" />
   </head>
   <body>
     <h1>this is my travel website</h1>
