--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-light">
+<nav class="navbar border-bottom navbar-expand-lg bg-body-light sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"><i class="fa-solid fa-compass"></i></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -11,7 +11,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listing">All Listings</a>
         <a class="nav-link" href="/listing/newPost">New Listings</a>
       </div>
