--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,10 @@
 .nav-link {
   color: black !important;
 }
+.site-footer {
+  margin: 10rem 0 0 0;
+}
+.footer-bottom {
+  /* background-color: #1111; */
+  justify-self: center;
+}
