--- a/views/listeduser.ejs
+++ b/views/listeduser.ejs
@@ -1,10 +1,12 @@
 <% layout('/layouts/boilerplates') %>
 <body>
   <h2><%= user.title %></h2>
-  <h2><%= user.description %></h2>
+  <h4><%= user.description %></h4>
   <p><%= user.price%></p>
-  <a href="/listing/<%=user._id%>/edit">EDIT</a>
+  <a href="/listing/<%=user._id%>/edit"
+    ><i class="fa-solid fa-pen-to-square"></i
+  ></a>
   <br />
   <br />
-  <a href="/listing/<%=user._id%>/delete">Delete this</a>
+  <a href="/listing/<%=user._id%>/delete"><i class="fa-solid fa-trash"></i></a>
 </body>
