--- a/views/includes/fotter.ejs
+++ b/views/includes/fotter.ejs
@@ -29,7 +29,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>Designed with ❤️ by Your Team</p>
+      <p>Designed with ❤️ by WonderLust</p>
     </div>
   </div>
 </footer>
