--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
         src="<%= listing.image.url%>"
         class="card-img-top"
         alt="<%= listing.image.filename%>"
+        style="height: 20rem"
       />
       <div class="card-body">
         <h5 class="card-title">
