--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,20 +1,26 @@
-<nav class="navbar border-bottom navbar-expand-lg bg-body-light sticky-top">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fa-solid fa-compass"></i></a>
+    <a class="navbar-brand" href="/"><i class="fa-solid fa-compass"></i></a>
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
+      data-bs-target="#navbarNav"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/listing">All Listings</a>
-        <a class="nav-link" href="/listing/newPost">New Listings</a>
-      </div>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/listing">All Listings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/listing/newPost">New Listings</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
