--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,25 +1,68 @@
 <% layout('/layouts/boilerplates') %>
 <body>
-  <h3>edit this</h3>
-  <form action="/listing/<%=user._id%>?_method=PUT" method="post">
-    <input type="text" name="listing[title]" id="" value="<%= user.title %>" />
-    <br />
-    <br />
-    <textarea id="" name="listing[description]">
-<%= user.description %></textarea
-    >
-    <br />
-    <br />
-    <input type="text" value="<%= user.image %>" name="listing[Image]" />
-    <br />
-    <br />
-    <input type="number" value="<%= user.price %>" name="listing[price]" />
-    <br />
-    <br />
-    <input type="text" value="<%= user.country %>" name="listing[country]" />
-    <br />
-    <br />
-    <input type="text" value="<%= user.location %>" name="listing[location]" />
-    <button type="submit">ADD</button>
-  </form>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <form action="/listing/<%=user._id%>?_method=PUT" method="post">
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            name="listing[title]"
+            id=""
+            value="<%= user.title %>"
+            class="form-control"
+          />
+        </div>
+
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea id="" name="listing[description]" class="form-control">
+                <%= user.description %>
+        </textarea
+          >
+        </div>
+        <div class="mb-3">
+          <label for="Image" class="form-label">Image</label>
+          <input
+            type="text"
+            value="<%= user.image.url %>"
+            name="listing[Image]"
+            class="form-control"
+          />
+        </div>
+
+        <div class="row">
+          <div class="mb-3 col-md-3">
+            <label for="Price" class="form-label">Price</label>
+            <input
+              type="number"
+              value="<%= user.price %>"
+              name="listing[price]"
+              class="form-control"
+            />
+          </div>
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">country</label>
+            <input
+              type="text"
+              value="<%= user.country %>"
+              name="listing[country]"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">location</label>
+          <input
+            type="text"
+            value="<%= user.location %>"
+            name="listing[location]"
+            class="form-control"
+          />
+        </div>
+
+        <button type="submit">SAVE</button>
+      </form>
+    </div>
+  </div>
 </body>
