--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -1,31 +1,71 @@
 <% layout('/layouts/boilerplates') %>
 <body>
   <h3>Create a new listing</h3>
-  <form action="/listing" method="post">
-    <input type="text" name="listing[title]" id="" placeholder="enter title" />
-    <br />
-    <br />
-    <textarea
-      placeholder="enter description"
-      id=""
-      name="listing[description]"
-    ></textarea>
-    <br />
-    <br />
-    <input
-      type="text"
-      placeholder="enter image URl/link"
-      name="listing[Image]"
-    />
-    <br />
-    <br />
-    <input type="number" placeholder="enter price" name="listing[price]" />
-    <br />
-    <br />
-    <input type="text" placeholder="enter country" name="listing[country]" />
-    <br />
-    <br />
-    <input type="text" placeholder="enter location" name="listing[location]" />
-    <button type="submit">ADD</button>
-  </form>
+  <div class="row">
+    <div class="col-8 offset-2">
+      <form action="/listing" method="post">
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            name="listing[title]"
+            id=""
+            class="form-control"
+            placeholder="Enter title"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea
+            id=""
+            name="listing[description]"
+            class="form-control"
+            placeholder="Enter Description"
+          >
+          </textarea>
+        </div>
+        <div class="mb-3">
+          <label for="Image" class="form-label">Image</label>
+          <input
+            type="text"
+            name="listing[Image]"
+            class="form-control"
+            placeholder="Enter Image URL"
+          />
+        </div>
+
+        <div class="row">
+          <div class="mb-3 col-md-3">
+            <label for="Price" class="form-label">Price</label>
+            <input
+              type="number"
+              name="listing[price]"
+              class="form-control"
+              placeholder="Enter Price"
+            />
+          </div>
+          <div class="mb-3 col-md-8">
+            <label for="country" class="form-label">country</label>
+            <input
+              type="text"
+              name="listing[country]"
+              class="form-control"
+              placeholder="Enter country"
+            />
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="location" class="form-label">location</label>
+          <input
+            type="text"
+            name="listing[location]"
+            class="form-control"
+            placeholder="Enter location"
+          />
+        </div>
+
+        <button type="submit">ADD</button>
+      </form>
+    </div>
+  </div>
 </body>
